# financial-services-trend-monitor

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
config/: agent_limits.yaml  allowed_sources.yaml  feedback.yaml
examples/: agent-execution-trace.md  example-run.md  relevant-feedback-behavior.md
src/: models.py
src/agent/: controller.py  llm_callback.py  tools.py
src/config/: sources.yaml
src/email/: send_email.py
src/feedback/: relevance_store.py  server.py
src/pipeline/: collect.py  dedupe.py  digest.py  extract.py
src/scheduler/: cron_entrypoints.py
src/scrape/: firecrawl_client.py
tests/: test_agent_controller.py  test_agent_entrypoint.py  test_agent_feedback.py  test_alert.py  test_dedupe.py  test_digest.py  test_feedback_server.py  test_full_flow.py  test_item_ids.py
