[project]
name = "trendbevakning"
version = "0.1.0"
description = "Agentic AI system for financial services trend monitoring"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
